Fix author information; Strip whitespace
Signed-off-by: Alex Coles <alex@alexcolesportfolio.com>

--- a/_posts/2006-3-13-writing.markdown
+++ b/_posts/2006-3-13-writing.markdown
@@ -1,19 +1,19 @@
 ---
 layout: post
 title: "Writing"
-author: admin
+author: myabc
 ---
 
- 
+
 I received a friendly reminder to update my blog the other day.
 
 I still haven't got the hang of it. It's partly because I don't really think I lead an eventful enough life to talk about it in great detail, and it's partly that I am not sure a blog deserves a great deal of my time. I could (and may still) start commenting on issues of "current importance", but that would be very time consuming.
 
 I am in the midst of writing essays. I have 8 or 9 essays to write in the next 6 weeks, and then that will be it. Unless I prevaricate and do a Master's, never again will I have to write an essay.
 
-But I digress.. I have the same problem with writing essays as I do with writing blogs. The first few postings (which were really for test purposes) were an exception. I seek perfection. I don't want to output more dross, prosaic banalities. If I'm going to have a blog I feel I should write something gripping. 
+But I digress.. I have the same problem with writing essays as I do with writing blogs. The first few postings (which were really for test purposes) were an exception. I seek perfection. I don't want to output more dross, prosaic banalities. If I'm going to have a blog I feel I should write something gripping.
 
-In the window in which I am typing there are five draft articles listed. They're all unfinished, because I don't yet think they're suitable for general consumption. 
+In the window in which I am typing there are five draft articles listed. They're all unfinished, because I don't yet think they're suitable for general consumption.
 
 On my desk there are three draft essays. They're also also unfinished, because I don't yet think they offer any originality of thought.
 
